some writing, i guess

--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,8 @@
 \setdefaultlanguage{english}
 \usepackage[en-US]{datetime2}
 
+\newcommand{\shorttitle}{???}
+
 \newcommand{\ldjin}{\textit{Long Day's Journey Into Night}}
 \newcommand{\oneill}{O'Neill}
 
@@ -73,8 +75,75 @@ ibidtracker=true,
 
 \mlatitle{}
 
+\footnote{As a brief aside, the only copy of \ldjin{} I could get my hands on
+  is the Kindle edition, which features neither page nor line numbers. As such,
+the best citations I can manage are by the Kindle's \enquote{locations.} My
+sincerest apologies.}
+
 When I was young, maybe 12 or 13, I saw a production of Eugene \oneill{}'s
-\ldjin{} at the Guthrie Theater.
+\ldjin{} at the Guthrie Theater. All of the subtext, and much of the text, went
+over my head at the time, but still I remember it as one of the best
+performances I've ever seen. Looking back now, with a few more years under my
+belt and a nose buried in \oneill{}'s text, I see not only the stunning
+portrayal of a deeply dysfunctional family who are nonetheless bound together
+by their love for one another, but also the construction of an Irish-American
+national identity and a serious attempt to cope with the roles of alcohol and
+alcohol abuse within that community. \oneill{} wrestles throughout his largely
+autobiographical work with competing conceptions of Ireland both as a beautiful
+homeland and as a poverty-ridden swamp, with Irish-Americans both as successful
+hardworking citizens and as undesirable drunks, with memory both as fond
+recollection and as painful haunting, and with alcohol both as a heartening
+tonic and as an inescapable disease.
+
+Before all that, though, it is worth nothing a few features of \ldjin{} which
+make it unique among plays. Firstly, it is, at least to some extent,
+autobiographical. Eugene \oneill{} was the youngest of three children. His
+father, James, was born in Ireland, and moved to the United States at the age
+of nine, later becoming an actor. Eugene's mother, Mary, was born in America to
+immigrant parents. Their oldest child, James \enquote{Jamie} \oneill{} Jr.,
+attempted to follow in his father's footsteps, but his acting career was held
+back in part by his alcoholism. Their second child, Edmund, was born five years
+later, and died of measles at the age of two. Eugene \oneill{} was born 10
+years after Jamie, spent much of his early life in boarding school, and
+discovered his mother's morphine addiction, which she had developed while
+recovering from his birth, at the age of 15. Eugene was diagnosed with
+tuberculosis at 24, and began writing plays while recovering in a
+sanatorium. Within the course of three years in Eugene's 30s, James Sr. died of
+cancer, Mary suffered a fatal stroke, and Jamie drank himself to death. Several
+years later, his health declining, \oneill{} wrote a series of three
+autobiographical plays, of which \ldjin{} was the second. He instructed his
+wife that these plays should never be staged and should be published as books
+no earlier than 25 years after his death, but she allowed both publication and
+staging a mere three years after cerebral atrophy got the better of him
+\parencite[loc. 2826--2862]{timeline}. In \ldjin{}, \oneill{} replaced his
+family name with Tyrone, to prevent his readers from interpreting the play as a
+strictly accurate autobiographical representation, which it was not, and
+swapped his own name with that of his brother Edmund, for reasons which elude
+me. As a result of the play's semi-autobiographical nature, we may analyze it
+in terms of \oneill{}'s own life; for example, our understanding of Jamie
+Tyrone's relationship to alcohol is deepened by the knowledge that it
+eventually killed Jamie \oneill{}.
+
+Secondly, as mentioned above, \ldjin{}, despite being formatted as a play, was
+never intended to be staged; rather, \oneill{} intended it to be consumed as a
+novel. As a result, his stage directions are distinctive both in that they are
+incredibly detailed and in that they offer little guidance to actors or
+directors, and arguably impose unnecessary restrictions on set designers. For
+example, at the beginning of the second act, \oneill{}'s \enquote{stage
+  directions} describe, \textquote[{\cite[loc. 709]{ldjin}}]{Edmund sits in the
+  armchair at left of table, reading a book. Or rather he is trying to
+  concentrate on it but cannot. He seems to be listening for some sound from
+  upstairs. His manner is nervously apprehensive and he looks more sickly than
+  in the first act.} This will hardly help an actor, who must determine on
+their own how best to appear \enquote{nervously apprehensive} or what actions
+might portray an inability to focus on a book, nor will it help a makeup
+artist, who must decide what features make a person appear \enquote{sickly.} It
+does, however, offer great insight into Edmund's physical, mental and moral
+state to a reader. A convenient upside is that \oneill{}'s intentions are often
+clearer than they might be in a play written for the stage; rather than having
+to deduce Edmund's nervous apprehension from directions which said, perhaps,
+that he bounced his leg and glanced up from his book, we can simply and
+explicitly read his mood off the page.
 
 \printbibliography{}
 \end{document}
