more writing, i guess.

--- a/main.tex
+++ b/main.tex
@@ -77,8 +77,8 @@ ibidtracker=true,
 
 \footnote{As a brief aside, the only copy of \ldjin{} I could get my hands on
   is the Kindle edition, which features neither page nor line numbers. As such,
-the best citations I can manage are by the Kindle's \enquote{locations.} My
-sincerest apologies.}
+  the best citations I can manage are by the Kindle's approximate
+  \enquote{locations.} My sincerest apologies.}
 
 When I was young, maybe 12 or 13, I saw a production of Eugene \oneill{}'s
 \ldjin{} at the Guthrie Theater. All of the subtext, and much of the text, went
@@ -116,12 +116,13 @@ wife that these plays should never be staged and should be published as books
 no earlier than 25 years after his death, but she allowed both publication and
 staging a mere three years after cerebral atrophy got the better of him
 \parencite[loc. 2826--2862]{timeline}. In \ldjin{}, \oneill{} replaced his
-family name with Tyrone, to prevent his readers from interpreting the play as a
-strictly accurate autobiographical representation, which it was not, and
-swapped his own name with that of his brother Edmund, for reasons which elude
-me. As a result of the play's semi-autobiographical nature, we may analyze it
-in terms of \oneill{}'s own life; for example, our understanding of Jamie
-Tyrone's relationship to alcohol is deepened by the knowledge that it
+family name with Tyrone, perhaps to prevent his readers from interpreting the
+play as a strictly accurate autobiographical representation, which it was not,
+and swapped his own name with that of his brother Edmund, perhaps to avoid
+seeming vain, as Edmund Tyrone in the play epitomizes many positive
+attributes. As a result of the play's semi-autobiographical nature, we may
+analyze it in terms of \oneill{}'s own life; for example, our understanding of
+Jamie Tyrone's relationship to alcohol is deepened by the knowledge that it
 eventually killed Jamie \oneill{}.
 
 Secondly, as mentioned above, \ldjin{}, despite being formatted as a play, was
@@ -144,6 +145,77 @@ clearer than they might be in a play written for the stage; rather than having
 to deduce Edmund's nervous apprehension from directions which said, perhaps,
 that he bounced his leg and glanced up from his book, we can simply and
 explicitly read his mood off the page.
+
+Every character who appears in \ldjin{}, and a majority of those mentioned are
+Irish or Irish-American, and \oneill{} is careful not to let us forget that
+fact. The opening stage directions describe Mary by saying that \textquote{her
+  face is distinctly Irish in type,} with a nose that is \enquote{long and
+  straight,} and a \enquote{mouth wide with full, sensitive lips}. This is
+accompanied by the claim that her face \enquote{must once have been extremely
+  pretty, and is still striking} \parencite[loc. 127]{ldjin}. Similarly, the
+servant, Cathleen, is described at her introduction as
+\textquote[{\cite[loc. 709]{ldjin}}]{a buxom Irish peasant, in her early
+  twenties, with a red-cheeked comely face, black hair and blue eyes---amiable,
+  ignorant, clumsy, and possessed by a dense, well-meaning stupidity}. Though
+his description is not entirely flattering, \oneill{} uses Irish physical
+features to represent beauty, and throughout the play, Irish behaviors and
+speech patterns also stand in for warmth, kindness and happiness. When Tyrone
+(aka James Sr.) reassures Mary of her beauty, he delivers his lines
+\textquote[{\cite[loc. 368]{ldjin}}]{\textit{with Irish blarney}}. When Mary is
+happy, she \textquote[{\cite[loc. 368]{ldjin}}]{\textit{laughs and an Irish
+    lilt comes into her voice}}. When she reminisces about her beautiful hair,
+she remembers that it was \textquote[{\cite[loc. 368]{ldjin}}]{a rare shade of
+  reddish brown and so long it came down below \textins{her} knees}, a
+recognizable depiction of a stereotypical Irish woman's hair. (A more modern
+and/or less subtle work might have made her ginger, but \oneill{}'s description
+is more accurate to the majority population of Ireland.)
+
+It's not just physical or vocal Irish traits which \oneill{} hallmarks,
+though. His characters, which is to say, him and his family, pride themselves
+on their stubbornness and admire it in others, even when they think they
+shouldn't. When Edmund recounts for his father the story of a tenant,
+Shaughnessy's, dispute with his neighbor, which Tyrone fears will result in
+legal repercussions for himself as the landlord, Tyrone cannot help but
+respond:
+
+\begin{dialogue}
+  \speak{Tyrone} \direct{Admiringly before he thinks.} The damned old
+  scoundrel! By God, you can't beat him! \direct{He laughs---then stops
+    abruptly and scowls.} The dirty blackguard! He'll get me in serious trouble
+  yet. I hope you told him I'd be mad as hell---
+
+  \speak{Edmund} I told him you'd be tickled to death over the great Irish
+  victory, and so you are. Stop faking, Papa.
+
+  \attrib{\cite[loc. 318]{ldjin}}
+\end{dialogue}
+
+Shaughnessy's stubbornness and wit in the face of a much more affluent and
+powerful man remind the reader of the historical dynamic between Ireland and
+England, wherein the Irish have stubbornly stood up for themselves, despite
+England's overwhelming social, political, economic and military upper hand, for
+centuries. \oneill{} glorifies this same stubbornness during an argument
+between Jamie and Tyrone, having Jamie ascribe it to his own analogue, Edmund,
+by saying, \textquote[{\cite[loc. 480]{ldjin}}]{I'd like to see anyone
+  influence Edmund more than he wants to be. His quietness fools people into
+  thinking they can do what they like with him. But he's stubborn as hell
+  inside and what he does is what he wants to do, and to hell with anyone
+  else!} Later in the same discussion, Tyrone says \textquote{\textit{with a
+    touch of pride,} \enquote{Whatever Edmund's done, he's had the guts to go
+    off on his own, where he couldn't come whining to me the minute he was
+    broke.}} This, too, the image of the self-made man, is a part of the
+Irish-American national identity \oneill{} is constructing, in part by showing
+Irish-American characters who admire it, and his stubbornness, in his
+distinctly Irish-American onstage analogue. It is not only Eugene \oneill{}'s
+own analogue who is perceived positively by other characters for having started
+at the bottom. Mary tells Jamie off in Act Two, giving him and the reader a
+glimpse into her love for Tyrone, by saying,
+\textquote[{\cite[loc. 844]{ldjin}}]{Stop sneering at your father! \textelp{}
+  You ought to be proud you're his son! He may have his faults. Who hasn't? But
+he's worked hard all his life. He made his way up from ignorance and poverty to
+the top of his profession! Everyone else admires him\textelp{}}. Here, too, we
+see how Irish-Americans admire themselves for working hard to lift themselves
+from poor backgrounds to become successful.
 
 \printbibliography{}
 \end{document}
