two more pages, give or take

--- a/main.tex
+++ b/main.tex
@@ -29,7 +29,10 @@
 \\\noindent\theclass{}\hspace*{2cm}
 \\\noindent\thedate{}\hspace*{2cm}
 \begin{center}
-  \thetitle{}
+  \thetitle{}\footnote{As a brief aside, the only copy of \ldjin{} I could get my hands on
+  is the Kindle edition, which features neither page nor line numbers. As such,
+  the best citations I can manage are by the Kindle's approximate
+  \enquote{locations.} My sincerest apologies.}
 \end{center}}
 
 \usepackage[margin=1in, headheight=14.5pt]{geometry}
@@ -74,11 +77,6 @@ ibidtracker=true,
 \thispagestyle{plain}
 
 \mlatitle{}
-
-\footnote{As a brief aside, the only copy of \ldjin{} I could get my hands on
-  is the Kindle edition, which features neither page nor line numbers. As such,
-  the best citations I can manage are by the Kindle's approximate
-  \enquote{locations.} My sincerest apologies.}
 
 When I was young, maybe 12 or 13, I saw a production of Eugene \oneill{}'s
 \ldjin{} at the Guthrie Theater. All of the subtext, and much of the text, went
@@ -216,6 +214,55 @@ he's worked hard all his life. He made his way up from ignorance and poverty to
 the top of his profession! Everyone else admires him\textelp{}}. Here, too, we
 see how Irish-Americans admire themselves for working hard to lift themselves
 from poor backgrounds to become successful.
+
+Of course, there's a reason why Irish-American immigrants started at the
+bottom. Ireland was among the poorest countries in Europe, and a majority of
+the immigrants among whom \oneill{} wished to inspire a shared cultural
+identity had left during or in the wake of the Great Hunger. For that reason,
+\ldjin{} must cope with those immigrants' memories of living
+\textquote[{\cite[loc. 455]{ldjin}}]{in a hovel on a bog}. Despite Ireland's
+poverty, \oneill{}'s first generation immigrants fiercely defend the homeland
+when their children speak ill of it; Tyrone's response to Jamie's
+\enquote{hovel on a bog} line is,Whatever Edmund's done, he's had the guts to go off on his own, where
+\textquote[{\cite[loc. 455]{ldjin}}]{\textelp{} keep your dirty tongue off
+  Ireland, with your sneers about peasants and bogs and hovels!} Later, while
+rehashing the same argument, Tyrone similarly bites,
+\textquote[{\cite[loc. 1144]{ldjin}}]{And keep your tongue off Ireland! You're
+  a fine one to sneer, with the map of it on your face!} In Tyrone's vicious
+responses to smears against Ireland, we can see a pride for his homeland which
+shapes his identity; he feels that attacks on Ireland are attacks against
+himself, and responds in kind by insulting Jamie. This equation of personal
+identity with national identity is a defining feature of nationalism, and
+while \oneill{} certainly doesn't glorify it in Tyrone, he demonstrates it and
+allows his audience to understand its mechanisms.
+
+The shared identity \oneill{} wants to create, though, isn't exclusively, or
+even primarily, among first-generation immigrants. Rather, he strives to give
+second-generation immigrants like himself and his mother a way to understand
+and to describe their experiences watching their parents remember a homeland
+they had never seen. In Act Three, Mary teaches Edmund, and through him
+\oneill{} and the audience, \textquote[{\cite[loc. 1684]{ldjin}}]{Your father
+  is a strange man, Edmund. It took many years before I understood him. You
+  must try to understand and forgive him, too, and not feel contempt because
+  he's close-fisted}. In many ways, this line summarizes the goal of \ldjin{}:
+a memoir or a journal through which \oneill{} can understand, and perhaps
+forgive, his family, after contemplating whence they came and how their
+experiences shaped them. Though he wished to delay publication, he still
+intended to eventually share that same understanding with the wider world, and
+his wife Carlotta ensured it happened sooner than \oneill{} had planned. Mary's
+attempt to impress understanding on Edmund continues,
+\textquote[{\cite[loc. 1697]{ldjin}}]{His father deserted his mother and their
+  six children a year or so after they came to America. He told them he had a
+  premonition that he would die soon, and he was homesick for Ireland, and
+  wanted to go back there to die. So he went and he did die. He must have been
+  a peculiar man, too. Your father had to go work in a machine shop when he was
+  only ten years old}. I cannot say how much of this is true of James
+\oneill{}, but it certainly makes James Tyrone a more sympathetic character to
+know that his superstition came from lack of education, his stinginess from
+poverty and his anger from abandonment. In showing this, \oneill{} makes the
+struggle to understand ones' parents central to Irish-American identity, and
+invites those of his audience who share that identity to share in that
+struggle.
 
 \printbibliography{}
 \end{document}
